crates/derive/tests/reactive/fail/04-generic-struct.rs
use sorrow_derive::Reactive;

#[derive(Reactive)]
pub struct Generic<T> {
    inner: T,
}

fn main() {}
